--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
   font-family: fantasy, cursive;
 }
 
-@media (max-width:768px) {
+@media (max-width: 768px) {
 
   .detail { text-align: center;
   }
@@ -26,7 +26,7 @@
 .main {
   display: block;
   width: 500px;
-  margin: 0 auto 0;
+  margin: 0 auto;
 }
 .add-task__text,.item__label,.item__text
  {
@@ -39,14 +39,14 @@
 }
 #incomplete-task
 {
-  margin:0;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
 }
 .item, .title {
-  list-style:none;
+  list-style: none;
 }
 .add-task__text,.add-task__button,.item__checkbox,.item__text,.item__button {
-  outline:none;
+  outline: none;
 }
 .add-task__button,.item__button {
   background: none;
@@ -67,7 +67,7 @@
   font-weight: 700;
   font-size: 15px;
   border-bottom: 2px solid #333;
-  padding: 30px 0 10px;
+  padding: 30px 0px 10px;
   margin: 0;
   text-transform: uppercase;
 }
@@ -90,7 +90,7 @@
 /* New Task */
 .add-task__label {
   display: block;
-  margin: 0 0 20px;
+  margin: 0px 0px 20px;
 }
 #new-task {
   width: 318px;
@@ -99,7 +99,7 @@
 /* Task list */
 .item {
   overflow: hidden;
-  padding: 20px 0;
+  padding: 20px 0px;
   border-bottom: 1px solid #eee;
   vertical-align: middle;
   display: flex;
@@ -109,7 +109,7 @@
 
 
 .item__checkbox {
-  margin: 0 10px;
+  margin: 0px 10px;
 }
 .item__label {
   padding-left: 10px;
@@ -137,16 +137,16 @@
 
 /* Edit Task */
 .item__text {
-  display:none
+  display: none
 }
 
 .item--edit-task .item__text {
-  display:inline-block;
-  width:224px
+  display: inline-block;
+  width: 224px
 }
 
 .item--edit-task .item__label {
-  display:none;
+  display: none;
 }
 
 #completed-task {
