--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
  {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .add-task__wrapper {
   display: flex;
@@ -118,7 +118,7 @@
   width: 226px;
 }
 .item__text {
-  width: 226px
+  width: 226px;
 }
 .item__img {
   height: 2em;
@@ -131,18 +131,18 @@
 
 /* Completed */
 .item__label--completed {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .item__text {
-  display: none
+  display: none;
 }
 
 .item--edit-task .item__text {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .item--edit-task .item__label {
